--- a/Tic-Tac-Toe/style.css
+++ b/Tic-Tac-Toe/style.css
@@ -46,3 +46,30 @@ body {
   border: none;
   cursor: pointer;
 }
+
+#new-btn {
+  background-color: rgba(109, 22, 166, 0.845);
+  color: white;
+  padding: 1.5vmin;
+  font-weight: 700;
+  font-size: 2vmin;
+  border-radius: 1rem;
+  border: none;
+  cursor: pointer;
+}
+#msg {
+  font-size: 4vmin;
+  font-weight: bold;
+  color: rgb(71, 46, 17);
+}
+.msg-container {
+  height: 100vmin;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 4rem;
+}
+.hide {
+  display: none;
+}
