--- a/Simple ToDo list/style.css
+++ b/Simple ToDo list/style.css
@@ -10,7 +10,7 @@ body {
   background: linear-gradient(135deg, #8052ec, #d161ff);
 }
 .container {
-  border: 2px solid white;
+  
   width: 40%;
   min-width: 450px;
   position: absolute;
@@ -65,4 +65,35 @@ body {
  box-shadow: 0 15px 30px rgba(0, 0, 0, 0.3);
  width: 100%;
  position: relative;
+}
+
+.task{
+  background-color: #ffffff;
+  height: 50px;
+  padding: 5px 10px;
+  margin-top: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 2px solid #d1d3d4;
+  cursor: pointer;
+
+}
+.task span{
+   font-family: monospace;
+   font-size: 15px;
+   font-weight: 400;
+}
+ .task button{
+  background-color: #8052ec;
+  color: #ffffff;
+  height: 100%;
+  width: 40px;
+  border-radius: 5px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+ }
+.complete{
+  text-decoration: line-through;
 }
