--- a/Snake-Game JS/style.css
+++ b/Snake-Game JS/style.css
@@ -1,6 +1,6 @@
 *{
   margin: 0;
-  padding:4px;
+  padding:0;
 }
 :root{
 
@@ -22,7 +22,7 @@
 
 
     /* border colors*/
-    --border-primary-color: #3333333;
+    --border-primary-color: #333333;
 
 
     /* border radius */
@@ -39,18 +39,52 @@ html{
   
     background-color: var(--bg-primary-color);
     color: var(--text-primary-color);
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
- .infos{
+
+
+/* main,
+section {
+  width: 100%;
+  height: 100%;
+} */
+
+section{
+  padding: var(--space-2xl);
   display: flex;
-  justify-content: space-around;
-  border-bottom: 1px solid rgb(37, 33, 33);
-  padding: 12px;
+  flex-direction: column;
+   min-height: calc(100vh - 80px);
+  gap: var(--space-lg);
+}
+
+ section .infos{
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
 
 
  }
+
  .info{
-  border: 1px solid #f0f0f0 ;
-  border-radius: 8px;
-  padding:8px;
-  
+  padding: var(--space-sm) var(--space-md);
+  border: 1px solid var(--border-primary-color) ;
+  border-radius: var(--border-radius-sm);
+ }
+
+ .board {
+  overflow: hidden;
+  border: 1px solid var(--border-primary-color);
+  flex-grow: 1;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(30px, 1fr));
+  grid-template-rows: repeat(auto-fill, minmax(30px, 1fr));
+
+ }
+
+ .block{
+    /* width: 30px; */
+    height: 30px;
+    border: 1px solid var(--border-primary-color);
+    
+    
  }
